--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,9 +42,10 @@ dependencies:
   cached_network_image: ^3.2.3
   shimmer: ^3.0.0
   gallery_saver: ^2.3.2
-  screenshot: ^1.3.0
+  screenshot: ^2.1.0
   path_provider: ^2.0.15
   share_plus: ^7.0.2
+  carousel_slider: ^4.2.1
 
 dev_dependencies:
   flutter_test:
